# hungry-panda

./: .gitignore  PROJECT_CONTEXT.md  README.md  ai-generation-issues  auth-issues  auth-revamp  design-refactor.db  design-uplift  full-test.js  inference-improvements  manifest.json  output-processing-improvements  process-improvements  project-context.db  pyproject.toml  reel-uplift.db  reels-enhancement  reels-maker  reels-maker-followups  reels-style-controls  requirements-dev.txt  requirements.txt  secure-url  server.pid  test-playwright.js  verification_test.py
analyzer/: competitor_tracker.py  content_engine.py  strategist.py
app/api/: main.py  reels.py
backend/: main.py  reels.py  reels_analyzer.py  reels_renderer.py
config/: .env.example  database.py  logging_config.py  settings.py
docs/: INSTAGRAM_SETUP.md  MCP_INTEGRATION.md  STEP2_CHECKLIST.md  STEP2_WALKTHROUGH.md  UI_FACELIFT_POA.md  UX_POLISH_PLAN.md
frontend/: dashboard.html  facebook-instagram-callback.html  reels.html  voice-styles.css
frontend/pages/: dashboard.html  facebook-instagram-callback.html  reels.html  upload.html
frontend/shared/: animations.js  liquid-ui.css  quotes.js  ticker-modal.js
infra/config/: database.py  feature_flags.py  logging_config.py  settings.py
infra/integrations/: __init__.py  facebook_instagram_login.py  instagram_login.py  llm_client.py  mcp_client.py
integrations/: __init__.py  facebook_instagram_login.py  instagram_login.py  llm_client.py  mcp_client.py
logs/: regression-report.txt
playwright-verification/: TEST-REPORT.md  comprehensive-test.js  test1-results.json  test2-results.json  test3-rerun.js  test3-results.json
remotion/: PLAYER_EVALUATION.md  README.md  package.json  tsconfig.json
remotion/src/: index.tsx
remotion/src/compositions/: ReelComposition.tsx  RemotionPlayer.tsx
scheduler/: poster.py
scripts/: populate_design_refactor.sql  setup_mcp.py
shared/: duration_solver.py  reel_templates.py
static/: manifest.json  sw.js
test-results/: test-results.json
tests/: __init__.py  conftest.py  regression-test.js  test_inference_improvements.py
tests/integration/: test_api.py
tests/unit/: test_config.py
ui-ideas/: ui-overhaul-implementation-brief
verification-screenshots/: TEST_REPORT.md
workers/analyzer/: competitor_tracker.py  content_engine.py  strategist.py
workers/reels/: analyzer.py  remotion_renderer.py  renderer.py
workers/scheduler/: poster.py
